--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Start Front End Development</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="image/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" href="image/favicon-152.png">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="favicon-152.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="w3-content" style="max-width:1300px">
@@ -26,7 +26,7 @@
     <div class="w3-half w3-blue-grey w3-container" style="height:700px">
         <div class="w3-padding-64 w3-center">
             <h1>About Me</h1>
-            <img src="image/maincharacterprofile.png" class="w3-margin" alt="Person" style="width:50%">
+            <img src="maincharacterprofile.png" class="w3-margin" alt="Person" style="width:50%">
             <div class="w3-left-align w3-padding-large">
                 <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
                 <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
