--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Start Front End Development</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon-precomposed" href="favicon-152.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
